tests/e2e/e0053_unexpected_end_of_line.error
Error: syntax error in story at line 1, column 13

1|    foo like /r/
                  ^

E0053: Unexpected end of line. Expected: ['_COLON'].
